# get_headers

./: .gitignore  README.md  SETUP.md  alembic.ini  logging_examples.py  pyproject.toml  requirements.txt  setup.bat  setup.sh
alembic/: env.py
alembic/versions/: .gitkeep
app/: __init__.py  config.py  database.py  dependencies.py  logging_config.py  main.py  schemas.py  security.py
app/api/: __init__.py  auth.py  router.py  users.py
app/api/headers/: routes.py
app/config/: config.py  database.py  logging_config.py
app/middleware/: __init__.py  logging_middleware.py
app/models/: __init__.py
app/services/: __init__.py  user_service.py
logs/: .gitkeep
tests/: __init__.py  conftest.py  test_main.py
